--- a/House price prediction/House_Price_Prediction.ipynb
+++ b/House price prediction/House_Price_Prediction.ipynb
@@ -26,6 +26,7 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
         "import sklearn.datasets\n",
         "from sklearn.model_selection import train_test_split\n",
         "from xgboost import XGBRegressor\n",
